--- a/dsa2273.md
+++ b/dsa2273.md
@@ -38,6 +38,62 @@ words[i] consists of lowercase English letters.
 
 ---
 
+Tweet 1 (Hook):
+#Day85 of #LearningInPublic
+Today's @LeetCode POTD: 2273. Find Resultant Array After Removing Anagrams 🧩
+
+It’s a cute little string problem — simple yet sneaky! Let’s understand how to “de-anagram” our array 👇
+#LeetCode #DSA #100DaysOfCode
+
+Tweet 2 (Story setup):
+Imagine you have a list of words.
+If two adjacent words are anagrams (same letters, jumbled order), you delete the later one.
+Keep doing it till no more anagrams are side-by-side 😅
+
+Your job? Return the final list that survives 🧠
+
+Tweet 3 (Example):
+words = ["abba","baba","bbaa","cd","cd"]
+
+Step by step:
+
+"abba" & "baba" → anagrams → remove "baba"
+
+"abba" & "bbaa" → anagrams → remove "bbaa"
+
+"cd" & "cd" → anagrams → remove one
+✅ Final = ["abba","cd"]
+
+Tweet 4 (Key Idea):
+We don’t care how anagrams are formed — just whether two neighbors have the same letters 🔠
+
+So for each word, think of its character frequency or sorted version.
+If the current word’s pattern = previous word’s pattern → skip it.
+Else → keep it ✨
+
+Tweet 5 (Why this works):
+Because the operation only depends on adjacent anagrams, not global ones.
+Once two consecutive words differ in their letter set, they both safely stay 💪
+
+No matter which order you remove them, the result stays the same 🔄
+
+Tweet 6 (Concept takeaway):
+👉 Always compare the structure (not order) of words
+👉 Think of anagrams as “same content, different arrangement”
+👉 This is basically pattern deduplication for strings 🎯
+
+Tweet 7 (Engagement):
+Fun question 🤔👇
+If you had to “de-anagram” your playlist — removing songs with the same tune but remixed order — which song would survive? 🎶😅
+
+Tweet 8 (Closing):
+That’s today’s @LeetCode POTD wrapped 🎀
+“Find Resultant Array After Removing Anagrams”
+Simple, elegant, & surprisingly logical 💡
+
+Tomorrow → another problem, another insight
+
+---
 
 ```cpp
 class Solution {
