--- a/dsa3349.md
+++ b/dsa3349.md
@@ -34,6 +34,57 @@ Constraints:
 
 ---
 
+Today’s @LeetCode POTD is 3349: Adjacent Increasing Subarrays Detection I 📈💫
+
+We’re finding two strictly increasing subarrays that sit side by side like twins 🫱🫲
+Let’s decode it together 🧵👇
+#LeetCode #DSA #100DaysOfCode
+
+Tweet 2 (Problem story):
+Given an array nums and a number k,
+can we find two back-to-back subarrays of length k,
+where both are strictly increasing?
+
+It’s like spotting two smooth “ascending slopes” right next to each other on a mountain 🏔️📊
+
+Tweet 3 (Example time):
+nums = [2,5,7,8,9,2,3,4,3,1], k = 3
+
+👉 [7,8,9] is increasing
+👉 [2,3,4] (right after it) is also increasing
+Two perfect slopes side-by-side ✅
+So answer = true ✨
+
+Tweet 4 (Core Idea):
+We don’t need to actually cut subarrays —
+we just need to track consecutive increasing streaks.
+When a streak breaks, start counting again 🧮
+
+If you ever see two consecutive streaks long enough (≥ k each) → boom 💥 found it!
+
+Tweet 5 (Thinking behind it):
+Every time numbers go up → increase count 📈
+When they stop → store previous streak, start new
+If both previous and current streaks are at least length k → condition satisfied ✅
+
+That’s the entire magic — efficient, clean, and elegant 🪄
+
+Tweet 6 (Lesson):
+The trick wasn’t about arrays —
+it was about detecting patterns in data flows 🔍
+Once you see “increasing streaks” as segments,
+the problem turns from hard → beautiful ❤️
+
+Tweet 7 (Engagement):
+Ever noticed how many DSA problems are really just about pattern recognition in disguise? 🤔
+Once your brain trains to see patterns → you level up as a problem solver ⚡
+
+Tweet 8 (Closing):
+So that’s today’s @LeetCode POTD ✨
+3349 — Adjacent Increasing Subarrays 🧩
+Moral: Track streaks. Spot patterns. Keep climbing. 📈🏔️
+
+---
 
 ```cpp
 class Solution {
