--- a/dsa2598.md
+++ b/dsa2598.md
@@ -36,3 +36,20 @@ Constraints:
 -109 <= nums[i] <= 10^9
 
 ---
+
+```cpp
+class Solution {
+public:
+	int findSmallestInteger(vector<int>& nums, int v) {
+		long long n = nums.size(), x, res = 0;
+		vector<int> rem(v, 0);
+		for (int i = 0; i < n; i++) {
+			x = ((nums[i] % v) + v) % v;
+			rem[x]++;
+		}
+
+		while (rem[res % v]--) res++;
+		return res;
+	}
+};
+```
