--- a/dsa3397.md
+++ b/dsa3397.md
@@ -38,6 +38,62 @@ Constraints:
 
 ---
 
+
+You can tweak each element by ±k just once — how can you make your array as distinct as possible? 🤔
+Let’s break it down 🧵👇
+#LeetCode #DSA #100DaysOfCode
+
+Tweet 2 (Problem story):
+You’re given an array nums and a number k.
+For every element, you can add or subtract up to k (or do nothing).
+
+Goal: make as many numbers as possible unique 🔢💫
+
+Tweet 3 (Example time):
+nums = [1,2,2,3,3,4], k = 2
+
+👉 After tweaking, we can make it like
+[-1, 0, 1, 2, 3, 4]
+✨ 6 distinct elements achieved!
+
+Tweet 4 (Intuition):
+When duplicates exist, we can spread them apart using ±k.
+But we must be smart — if we move them randomly, overlaps may happen again 😅
+
+We need a systematic way to choose where each element lands 🎯
+
+Tweet 5 (Core Idea):
+Sort the array first 🧮
+Then go left → right, and for each number:
+
+Pick the smallest possible value within its allowed range that’s still bigger than the previous number.
+
+It’s like filling boxes in order — no gaps wasted, no overlap allowed 📦
+
+Tweet 6 (Why it works):
+By always choosing the next smallest valid number,
+we maximize space for future elements —
+leading to maximum distinct count! 🚀
+
+Simple, greedy, elegant 💡
+
+Tweet 7 (Lesson):
+Sometimes optimization isn’t about big jumps,
+it’s about tiny smart moves in the right order 👣
+
+Greedy + Sorting = underrated combo in DSA 💪
+
+Tweet 8 (Engagement):
+Would you rather:
+👉 Go big with one operation
+or
+👉 Go step-by-step and stay optimal? 😏
+
+Because today’s problem proves — consistency wins
+
+
+---
+
 ```cpp
 class Solution {
 public:
