--- a/dsa1625.md
+++ b/dsa1625.md
@@ -52,3 +52,47 @@ s consists of digits from 0 to 9 only.
 1 <= b <= s.length - 1
  
 ---
+
+```cpp
+class Solution {
+private:
+      string ro(string &s,int b){
+        int n=s.size();
+        string pre=s.substr(0,b);
+        string suf=s.substr(b,n-b);
+        return suf+pre;
+      }    
+public:
+    string findLexSmallestString(string s, int a, int b) {
+        int n=s.size();
+        queue<string>q;
+        q.push(s);
+        unordered_map<string,int>mp;
+        mp[s]=1;
+        string mini=s;
+        while(!q.empty()){
+            string node=q.front();
+            q.pop();
+            mini=min(mini,node);
+            string rotate=ro(node,b);
+            if(mp.find(rotate)==mp.end()){
+              q.push(rotate);
+              mp[rotate]=1; 
+            }
+            string addNode=node;
+            for(int i=1;i<n;i+=2){
+                int val=node[i]-'0';
+                val=(val+a)%10;
+                addNode[i]=val+'0';
+            }
+            if(mp.find(addNode)==mp.end()){
+                q.push(addNode);
+                mp[addNode]=0;
+            }
+                    
+        }
+        return mini;
+    }
+};
+
+```
