--- a/dsa1625.md
+++ b/dsa1625.md
@@ -52,7 +52,56 @@ s consists of digits from 0 to 9 only.
 1 <= b <= s.length - 1
  
 ---
+Today's @LeetCode POTD: "Lexicographically Smallest String After Applying Operations" (1625)
 
+A deceptively tricky problem about string transformations 🔁✨
+Let’s simplify it 👇
+
+💭 You’re given a string s made of digits (even length), and two operations you can use any number of times:
+1️⃣ Add a → Add a to all digits at odd indices (like 1,3,5,...) cyclically (9→0).
+2️⃣ Rotate by b → Move the last b digits to the front.
+
+Your goal? 🎯
+👉 Find the smallest possible string (lexicographically) after performing these operations in any order, any number of times!
+
+🧠 The trick here:
+These operations can be done infinitely, but many of them repeat after a few cycles.
+So instead of brute force, we can explore all unique strings we can reach!
+
+🔍 How we think:
+1️⃣ Start with the original string.
+2️⃣ Try both operations:
+
+Add to odd indices.
+
+Rotate by b.
+3️⃣ Store all new strings you generate and keep exploring them (like BFS in graphs).
+4️⃣ Keep track of the smallest string seen so far.
+
+💡 Why BFS?
+Because every operation leads to new possible states (like exploring all connected nodes).
+We keep exploring until we’ve seen all possible transformations 🔁
+
+✨ Intuition Recap:
+Each operation gives a “path” to transform the string.
+By exploring every unique result once, we ensure we don’t miss the smallest one.
+
+It’s like searching for the “most sorted” version of the string hidden behind rotations and digit tweaks 🧩
+
+📊 Complexity Insight:
+✅ Limited unique states (since digits & rotations repeat after some cycles).
+✅ Efficient BFS ensures we visit each state once.
+✅ Guaranteed termination.
+
+🚀 Takeaway:
+This problem isn’t about math — it’s about state exploration and pattern observation.
+You’re not just rotating or adding — you’re navigating through all possible “worlds” of the string! 🌍✨
+
+💬 What I learned today:
+Even a simple string with two small operations can create a huge but finite search space — mastering BFS here gives a deeper appreciation for problem modeling ❤️
+
+
+---
 ```cpp
 class Solution {
 private:
