--- a/dsa3346.md
+++ b/dsa3346.md
@@ -42,3 +42,28 @@ Constraints:
 0 <= numOperations <= nums.length
 
 ---
+
+```cpp
+class Solution {
+public:
+    int maxFrequency(vector<int>& nums, int k, int numOperations) {
+        int n = nums.size();
+        int ans = 0;
+        sort(nums.begin(), nums.end());
+
+        unordered_map<int, int> freq;
+        for(int x : nums) freq[x]++;
+        int mx = nums[n - 1];
+
+        for(int val = 0; val <= mx; val++) { // consider we are converging max possible elements to value = val, and we will check for each value from 0 to max element
+            int lb = lower_bound(nums.begin(), nums.end(), val - k) - nums.begin();
+            int ub = upper_bound(nums.begin(), nums.end(), val + k) - nums.begin() - 1;
+
+            int cnt = freq[val] + min(ub - lb + 1 - freq[val], numOperations);
+            ans = max(ans, cnt);
+        }
+
+        return ans;
+    }
+};
+```
