--- a/dsa3346.md
+++ b/dsa3346.md
@@ -55,7 +55,8 @@ public:
         for(int x : nums) freq[x]++;
         int mx = nums[n - 1];
 
-        for(int val = 0; val <= mx; val++) { // consider we are converging max possible elements to value = val, and we will check for each value from 0 to max element
+        for(int val = 0; val <= mx; val++) {
+// consider we are converging max possible elements to value = val, and we will check for each value from 0 to max element
             int lb = lower_bound(nums.begin(), nums.end(), val - k) - nums.begin();
             int ub = upper_bound(nums.begin(), nums.end(), val + k) - nums.begin() - 1;
 
