--- a/dsa3347.md
+++ b/dsa3347.md
@@ -42,7 +42,69 @@ Constraints:
 0 <= numOperations <= nums.length
 
 ---
+Tweet 1 (Hook):
+#Day94 of #LearningInPublic
+Today’s @LeetCode POTD is 3347: Maximum Frequency of an Element After Performing Operations II 🔢✨
 
+We can tweak each element slightly numOperations times, and the goal is to make one number appear as many times as possible 💡
+Let’s break it down 🧵👇
+#LeetCode #DSA #100DaysOfCode
+
+Tweet 2 (Problem story):
+Given an array nums, a number k, and numOperations:
+
+Each operation lets us add/subtract up to k to one element
+
+You can use each index only once
+Goal: maximize the frequency of any number 🔢
+
+It’s like leveling up numbers to form a “crowd favorite”! 😎
+
+Tweet 3 (Example time):
+nums = [1,4,5], k = 1, numOperations = 2
+
+Add 0 to 4 → still 4
+
+Add -1 to 5 → becomes 4
+Now 4 appears twice → max frequency = 2 ✅
+
+Tweet 4 (Core intuition):
+Think of it like grouping numbers together:
+
+We can slightly adjust numbers within ±k
+
+Operations = your “moves” to merge numbers
+
+Max frequency = largest group we can form using moves ✨
+
+Tweet 5 (Strategy simplified):
+Step-by-step logic:
+
+Sort the numbers
+
+Slide a “window” of numbers you can adjust into each other
+
+Use numOperations wisely to merge numbers within ±k
+
+Track the largest group formed → that’s your max frequency 🚀
+
+Tweet 6 (Why it works):
+Sorting + sliding window lets us see which numbers can cluster together easily.
+
+No wasted moves, no random adjustments — every operation counts ✅
+
+Tweet 7 (Analogy):
+Imagine a party 🎉
+
+Each guest = a number
+
+You can convince a few guests (±k) to wear the same color
+
+Max frequency = biggest group in the same color 🎨
+Plan wisely → largest “crowd” forms! 🥳
+
+
+---
 
 ```cpp
 class Solution {
