--- a/dsa3461.md
+++ b/dsa3461.md
@@ -47,7 +47,48 @@ Constraints:
 s consists of only digits.
 
 ---
+#Day95 of #LearningInPublic
+Today's @LeetCode POTD 💻:
+“Check If Digits Are Equal in String After Operations I” 🔢
 
+Let’s decode this step-by-step ⬇️
+
+1️⃣ Problem Intuition:
+You get a string made of digits (like “3902”).
+Now you repeatedly replace each pair of consecutive digits with the sum of those digits mod 10 — until only two digits remain.
+
+Then… you simply check —
+👉 Are those two digits equal?
+
+If yes → return true ✅
+Else → false ❌
+
+2️⃣ Example Walkthrough (fun one 😄)
+
+Start: "3902"
+→ (3+9)%10 = 2, (9+0)%10 = 9, (0+2)%10 = 2
+👉 "292"
+
+Next: (2+9)%10 = 1, (9+2)%10 = 1
+👉 "11"
+
+Now both digits same → ✅ true
+
+3️⃣ Core Insight 🔍
+Each operation compresses the string — it’s like a digital chain reaction!
+At every step, you’re only caring about pair sums mod 10, so the pattern of reduction repeats in predictable cycles.
+
+Think of it as mixing colors 🎨 until only two shades remain — if they match, we return true! 😆
+
+4️⃣ Complexity Insight ⚙️
+Each step shortens the string by 1.
+So total operations = O(n²) in worst case.
+But since n ≤ 100, it’s totally fine 💪
+
+✨ Takeaway:
+A neat simulation problem that trains your brain to think in transformations rather than static arrays — stepwise evolution logic 👏
+
+---
 ```cpp
 class Solution {
 public:
