--- a/dsa2048.md
+++ b/dsa2048.md
@@ -40,3 +40,37 @@ Constraints:
 
 ---
 
+```cpp
+
+class Solution {
+public:
+bool balanced(int n ){
+
+    int a[10] = {0};
+    while(n){
+        int x = n%10;
+        a[x]+=1;
+        n = n/10;
+        if(a[x] > x) return false;
+    }
+    for(int i =0;i<=9;i++){
+        if(a[i]!=i && a[i]!=0){
+            return false;
+        }
+    }
+    return true;
+    
+}
+int nextBeautifulNumber(int n) {
+    n+=1;
+     while(n<=INT_MAX){
+        if(balanced(n)){
+            return n;
+        }
+        n+=1;
+    }
+    return -1;
+    
+}
+};
+```
