--- a/dsa2048.md
+++ b/dsa2048.md
@@ -40,6 +40,58 @@ Constraints:
 
 ---
 
+👇
+
+🧵 #Day96 of #LearningInPublic
+Today's @LeetCode POTD: "Next Greater Numerically Balanced Number" (2048)
+
+Let’s break it down simply 👇
+
+💡 What's the problem?
+A number is numerically balanced if each digit d appears exactly d times.
+
+For example:
+
+22 → digit 2 appears twice ✅
+
+1333 → 1 appears once, 3 appears thrice ✅
+
+We need to find the smallest numerically balanced number greater than n.
+
+🧠 Core Idea:
+Start from n + 1 and check each number until we find one that’s “balanced”.
+
+How do we check if a number is balanced?
+👉 Count frequency of each digit
+👉 For every digit d, ensure its count == d
+👉 If any count exceeds its digit, discard early (for efficiency)
+
+⚙️ Optimization trick:
+Instead of overthinking the generation logic — a simple frequency-based validation works perfectly within given constraints (n ≤ 10^6).
+It’s brute force… but beautifully sufficient 😌
+
+✨ Examples:
+
+Input: 1 → Output: 22
+
+Input: 1000 → Output: 1333
+
+Input: 3000 → Output: 3133
+
+Pattern?
+The next balanced number grows intuitively, matching digits with their counts.
+
+🔍 Learning:
+Sometimes, the best solution isn’t the smartest-looking one — it’s the one that fits the limits and works cleanly.
+Simplicity wins again! 💪
+
+🚀 Key Takeaway:
+Don’t fear brute force — optimize where it matters.
+Even a direct approach shines when constraints are kind.
+
+
+---
+
 ```cpp
 
 class Solution {
