--- a/dsa1716.md
+++ b/dsa1716.md
@@ -29,7 +29,46 @@ Constraints:
 1 <= n <= 1000
 
 ---
+Tweet 1:
+#Day97 of #LearningInPublic 🧠
+Today's @LeetCode POTD — “Calculate Money in Leetcode Bank” 💰
 
+Hercy saves money every day for his dream car 🚗
+Let’s understand how his pattern of saving becomes a neat little math puzzle 👇
+
+Tweet 2:
+📅 Every week has 7 days.
+
+On Monday, Hercy starts with $1.
+
+Each next day, he adds $1 more than the day before.
+
+Each new Monday, he increases his starting amount by $1 compared to last week.
+
+So the pattern looks like:
+Week1 → 1,2,3,4,5,6,7
+Week2 → 2,3,4,5,6,7,8
+and so on…
+
+Tweet 3:
+To find the total after n days 👇
+
+1️⃣ Break the total days into full weeks (n // 7) and leftover days (n % 7).
+2️⃣ For each week, the start amount increases by +1.
+3️⃣ Add the 7-day sum each time, then handle the leftover days for the last week.
+
+That’s it — pure math & loops 🔁
+
+Tweet 4:
+✨ Logic in plain words:
+
+“Keep adding week by week, starting one dollar higher each Monday — and count how many days are left for the last partial week.”
+
+The trick is balancing week increments + day increments together!
+
+
+
+---
 
 ```cpp
 class Solution {
