--- a/dsa2043.md
+++ b/dsa2043.md
@@ -42,3 +42,53 @@ n == balance.length
 At most 10^4 calls will be made to each function transfer, deposit, withdraw.
 
 ---
+
+
+```cpp
+#include <vector>
+using namespace std;
+
+class Bank {
+private:
+    vector<long long> balance;  // Stores balances for all accounts
+    int totalAccounts;          // Number of accounts
+
+    // Check if an account number is valid
+    bool isValid(int account) {
+        return account >= 1 && account <= totalAccounts;
+    }
+
+public:
+    // Constructor: initialize the bank with given balances
+    Bank(vector<long long>& initialBalances) {
+        balance = initialBalances;
+        totalAccounts = balance.size();
+    }
+
+    // Transfer money from one account to another
+    bool transfer(int from, int to, long long amount) {
+        if (!isValid(from) || !isValid(to)) return false;    // Invalid account numbers
+        if (balance[from - 1] < amount) return false;        // Not enough money
+        balance[from - 1] -= amount;                         // Take from sender
+        balance[to - 1] += amount;                           // Give to receiver
+        return true;
+    }
+
+    // Deposit money into an account
+    bool deposit(int account, long long amount) {
+        if (!isValid(account)) return false;                 // Invalid account
+        balance[account - 1] += amount;                      // Add money
+        return true;
+    }
+
+    // Withdraw money from an account
+    bool withdraw(int account, long long amount) {
+        if (!isValid(account)) return false;                 // Invalid account
+        if (balance[account - 1] < amount) return false;     // Not enough money
+        balance[account - 1] -= amount;                      // Subtract money
+        return true;
+    }
+};
+
+
+```
