--- a/dsa3370.md
+++ b/dsa3370.md
@@ -42,3 +42,17 @@ Constraints:
 
 ---
 
+```cpp
+class Solution {
+public:
+    int smallestNumber(int n) {
+        int a = 1;
+        while (true) {
+            int x = pow(2, a) - 1;
+            if (x >= n) return x;
+            a++;
+        }
+    }
+};
+
+```
