--- a/dsa3370.md
+++ b/dsa3370.md
@@ -39,6 +39,52 @@ Constraints:
 
 1 <= n <= 1000
 
+---
+
+Tweet 1:
+#Day101 of #LearningInPublic 🧠
+Today's @LeetCode POTD — “Smallest Number With All Set Bits” 💡
+
+Given a number n, find the smallest number x ≥ n such that its binary form has all bits set to 1.
+Sounds fancy? Let’s break it down in simple words 👇
+
+Tweet 2:
+👀 Quick reminder:
+Binary numbers are made of 0s and 1s.
+
+When all bits are 1, numbers look like this ⬇️
+1 → 1
+3 → 11
+7 → 111
+15 → 1111
+
+Notice something? Each is of the form (2^a - 1) ✨
+
+Tweet 3:
+So the idea is simple —
+👉 Start from a = 1, keep calculating (2^a - 1)
+👉 Stop when that value becomes ≥ n
+
+That’s your smallest number with all bits set 💯
+
+It’s basically finding which “all 1s” number can cover your n.
+
+Tweet 4:
+Let’s visualize 🔍
+
+If n = 5 → next “all 1s” number is 7 → 111
+
+If n = 10 → next “all 1s” number is 15 → 1111
+
+If n = 3 → already 11 → so answer = 3
+
+Clean logic + simple loop ✅
+
+Tweet 5 (closing):
+✨ Intuition: Keep making numbers of the form (2^a - 1)
+Stop when it’s not smaller than n.
+That’s your answer — no fancy tricks, just pure logic 😄
+
 
 ---
 
