--- a/dsa1526.md
+++ b/dsa1526.md
@@ -36,3 +36,20 @@ Constraints:
 1 <= target[i] <= 10^5
 
 ---
+
+
+```cpp
+class Solution {
+public:
+    int minNumberOperations(vector<int>& target) {
+        int n = target.size();
+        if (n == 0) return 0;
+
+        int res = target[0];
+        for (int i = 1; i < n; ++i)
+            res += max(0, target[i] - target[i - 1]);
+        return res;
+    }
+};
+
+```
