--- a/dsa1526.md
+++ b/dsa1526.md
@@ -36,7 +36,52 @@ Constraints:
 1 <= target[i] <= 10^5
 
 ---
+Tweet 1:
+#Day102 of #LearningInPublic 🧠
+Today's @LeetCode POTD — “Minimum Number of Increments on Subarrays to Form a Target Array” 💡
 
+We start from all zeros ➡️ and want to reach the given target array using the fewest “increment subarray” operations.
+Sounds tricky? Let’s decode it 👇
+
+Tweet 2:
+Imagine you have an array of zeros like:
+[0,0,0,0,0]
+and you need to make it [1,2,3,2,1] 😯
+
+You can choose any continuous subarray and increase every number in it by 1 in one move.
+The goal → reach target using the least such moves!
+
+Tweet 3:
+Here’s the key insight 🧠✨
+
+👉 Every time the value increases compared to the previous element,
+you need that many new increments to reach the new height.
+
+👉 But when the value drops or stays the same, you don’t need extra moves — because those were already done before.
+
+Tweet 4:
+Let’s visualize 👇
+
+For [1,2,3,2,1]
+Start with first value → 1 move needed.
+Then:
+2→3 (+1)
+3→3 (+0)
+3→2 (+0)
+2→1 (+0)
+
+So total = 1 + (2-1) + (3-2) = 3 moves ✅
+
+Tweet 5:
+In short ✨
+🔹 Add target[0] (the first climb).
+🔹 Then, for every next element,
+add only the positive increase from the previous one.
+
+That’s it!
+Simple, linear, and elegant 💫
+
+---
 
 ```cpp
 class Solution {
