--- a/dsa3289.md
+++ b/dsa3289.md
@@ -45,3 +45,22 @@ nums.length == n + 2
 The input is generated such that nums contains exactly two repeated elements.
 
 ---
+```cpp
+
+class Solution {
+public:
+    vector<int> getSneakyNumbers(vector<int>& nums) 
+    {
+        vector<int> ans;
+        vector<int> count(nums.size(), 0);
+
+        for (int val : nums)
+        {
+            if (++count[val] == 2)
+                ans.push_back(val);
+        }
+
+        return ans;
+    }
+};
+```
