--- a/dsa3289.md
+++ b/dsa3289.md
@@ -45,6 +45,45 @@ nums.length == n + 2
 The input is generated such that nums contains exactly two repeated elements.
 
 ---
+
+Tweet 1:
+#Day103 of #LearningInPublic 🧠
+Today's @LeetCode POTD — “The Two Sneaky Numbers of Digitville” 🔍
+
+In Digitville, every number from 0 to n-1 was supposed to appear once…
+but two sneaky numbers showed up twice! 😱
+
+Let’s catch the culprits 👇
+
+Tweet 2:
+🎯 The goal:
+Find which two numbers appear twice in the list.
+
+Example:
+[0,3,2,1,3,2] → the sneaky ones are 2 & 3 🕵️‍♂️
+
+Tweet 3:
+💡 Think simple — no need for fancy tricks!
+
+We’ll just count how many times each number appears 👇
+1️⃣ Create a list to store counts
+2️⃣ Go through each number one by one
+3️⃣ When a number’s count becomes 2 — boom 💥 found a sneaky number!
+
+Tweet 4:
+Let’s visualize 🧠
+
+For [7,1,5,4,3,4,6,0,9,5,8,2]
+
+→ as you go through:
+4 shows up twice → first sneaky one
+5 shows up twice → second sneaky one
+
+Final answer → [4,5] ✅
+
+
+---
+
 ```cpp
 
 class Solution {
