--- a/dsa3217.md
+++ b/dsa3217.md
@@ -51,3 +51,26 @@ The number of nodes in the given list is in the range [1, 105].
 The input is generated such that there is at least one node in the linked list that has a value not present in nums.
 
 ---
+
+
+
+```cpp
+class Solution {
+public:
+    ListNode* modifiedList(vector<int>& valuesToRemove, ListNode* head) {        
+        sort(valuesToRemove.begin(), valuesToRemove.end());
+        ListNode* dummy = new ListNode(-1);
+        ListNode* tail = dummy;
+        while (head != nullptr){            
+            if (!binary_search(valuesToRemove.begin(), valuesToRemove.end(), head->val)) {
+                tail->next = head;
+                tail = tail->next;
+            }
+            head = head->next;
+        }
+        tail->next = nullptr;
+        return dummy->next;
+    }
+};
+
+```
