--- a/dsa3217.md
+++ b/dsa3217.md
@@ -52,7 +52,7 @@ The input is generated such that there is at least one node in the linked list t
 
 ---
 
-#Day104 of #LearningInPublic 🚀
+### Day104 of #LearningInPublic 🚀
 Today's @LeetCode POTD — “Delete Nodes From Linked List Present in Array”
 
 We’re given:
@@ -60,14 +60,14 @@ We’re given:
 ✔ A linked list
 Goal → Delete all nodes from the list whose values exist in that array.
 
-Tweet 2:
+###  2:
 🧠 Think of it like this:
 You have a guest list (array).
 You have people standing in a line (linked list).
 Anyone whose name is in the “not allowed” list → remove from the line.
 Keep the rest in the same order. Simple!
 
-Tweet 3:
+###  3:
 💡 How we solve it (super beginner-friendly logic):
 
 First, sort the array or store it so we can quickly check if a value should be removed.
@@ -79,7 +79,7 @@ If it is in the array → skip it.
 
 At the end, return the cleaned-up list. ✅
 
-Tweet 4:
+###  4:
 📌 Example:
 nums = [1,2,3]
 list = 1 → 2 → 3 → 4 → 5
@@ -89,7 +89,7 @@ Final list = 4 → 5
 
 Same process for all test cases. No magic, just smart filtering!
 
-Tweet 5 (Closing):
+### 5 (Closing):
 ✨ This problem teaches:
 ✔ Efficient searching (like binary search / sets)
 ✔ Linked list traversal
