--- a/dsa2257.md
+++ b/dsa2257.md
@@ -34,3 +34,56 @@ guards[i].length == walls[j].length == 2
 All the positions in guards and walls are unique.# 2257. Count Unguarded Cells in the Grid
 
 ---
+
+```cpp
+class Solution {
+public:
+    int countUnguarded(int m, int n, vector<vector<int>>& g, vector<vector<int>>& w) {
+        vector<vector<int>> vis(m, vector<int>(n, 0));
+        
+        // Mark walls = 2
+        for (auto val : w)
+            vis[val[0]][val[1]] = 2;
+
+        // Mark guards = 3
+        for (auto val : g)
+            vis[val[0]][val[1]] = 3;
+
+        // Traverse in four directions from each guard
+        for (auto val : g) {
+            int row = val[0], col = val[1];
+
+            // Down
+            for (int i = row + 1; i < m; i++) {
+                if (vis[i][col] == 2 || vis[i][col] == 3) break;
+                vis[i][col] = 1;
+            }
+            // Up
+            for (int i = row - 1; i >= 0; i--) {
+                if (vis[i][col] == 2 || vis[i][col] == 3) break;
+                vis[i][col] = 1;
+            }
+            // Right
+            for (int j = col + 1; j < n; j++) {
+                if (vis[row][j] == 2 || vis[row][j] == 3) break;
+                vis[row][j] = 1;
+            }
+            // Left
+            for (int j = col - 1; j >= 0; j--) {
+                if (vis[row][j] == 2 || vis[row][j] == 3) break;
+                vis[row][j] = 1;
+            }
+        }
+
+        int unguarded = 0;
+        for (int i = 0; i < m; i++)
+            for (int j = 0; j < n; j++)
+                if (vis[i][j] == 0)
+                    unguarded++;
+
+        return unguarded;
+    }
+};
+
+
+```
