--- a/dsa2257.md
+++ b/dsa2257.md
@@ -38,52 +38,54 @@ All the positions in guards and walls are unique.# 2257. Count Unguarded Cells i
 ```cpp
 class Solution {
 public:
-    int countUnguarded(int m, int n, vector<vector<int>>& g, vector<vector<int>>& w) {
-        vector<vector<int>> vis(m, vector<int>(n, 0));
-        
-        // Mark walls = 2
-        for (auto val : w)
-            vis[val[0]][val[1]] = 2;
+    int countUnguarded(int m, int n, vector<vector<int>>& guards, vector<vector<int>>& walls) {
+        vector<vector<int>> grid(m, vector<int>(n, 0));
+        // 0 = empty, 1 = guarded, 2 = wall, 3 = guard
 
-        // Mark guards = 3
-        for (auto val : g)
-            vis[val[0]][val[1]] = 3;
+        for (auto& w : walls) grid[w[0]][w[1]] = 2;
+        for (auto& g : guards) grid[g[0]][g[1]] = 3;
 
-        // Traverse in four directions from each guard
-        for (auto val : g) {
-            int row = val[0], col = val[1];
-
-            // Down
-            for (int i = row + 1; i < m; i++) {
-                if (vis[i][col] == 2 || vis[i][col] == 3) break;
-                vis[i][col] = 1;
+        // Sweep left → right and right → left (row-wise)
+        for (int i = 0; i < m; i++) {
+            bool seen = false;
+            for (int j = 0; j < n; j++) {
+                if (grid[i][j] == 2) seen = false;              // wall blocks vision
+                else if (grid[i][j] == 3) seen = true;          // start vision
+                else if (seen) grid[i][j] = 1;                  // mark guarded
             }
-            // Up
-            for (int i = row - 1; i >= 0; i--) {
-                if (vis[i][col] == 2 || vis[i][col] == 3) break;
-                vis[i][col] = 1;
-            }
-            // Right
-            for (int j = col + 1; j < n; j++) {
-                if (vis[row][j] == 2 || vis[row][j] == 3) break;
-                vis[row][j] = 1;
-            }
-            // Left
-            for (int j = col - 1; j >= 0; j--) {
-                if (vis[row][j] == 2 || vis[row][j] == 3) break;
-                vis[row][j] = 1;
+            seen = false;
+            for (int j = n - 1; j >= 0; j--) {
+                if (grid[i][j] == 2) seen = false;
+                else if (grid[i][j] == 3) seen = true;
+                else if (seen) grid[i][j] = 1;
             }
         }
 
+        // Sweep top → bottom and bottom → top (column-wise)
+        for (int j = 0; j < n; j++) {
+            bool seen = false;
+            for (int i = 0; i < m; i++) {
+                if (grid[i][j] == 2) seen = false;
+                else if (grid[i][j] == 3) seen = true;
+                else if (seen) grid[i][j] = 1;
+            }
+            seen = false;
+            for (int i = m - 1; i >= 0; i--) {
+                if (grid[i][j] == 2) seen = false;
+                else if (grid[i][j] == 3) seen = true;
+                else if (seen) grid[i][j] = 1;
+            }
+        }
+
+        // Count unguarded cells
         int unguarded = 0;
         for (int i = 0; i < m; i++)
             for (int j = 0; j < n; j++)
-                if (vis[i][j] == 0)
+                if (grid[i][j] == 0)
                     unguarded++;
 
         return unguarded;
     }
 };
-
 
 ```
