--- a/dsa2257.md
+++ b/dsa2257.md
@@ -36,6 +36,62 @@ All the positions in guards and walls are unique.# 2257. Count Unguarded Cells i
 
 ---
 
+Tweet 1:
+#Day105 of #LearningInPublic
+Today's @LeetCode POTD – "Count Unguarded Cells in the Grid" 🛡️
+
+We’re given a grid with:
+
+Guards 👮
+
+Walls 🧱
+Our task? Count how many empty cells are not watched by any guard.
+
+Tweet 2:
+💡 How guards see the grid?
+A guard can look in 4 directions:
+➡ Right
+⬅ Left
+⬆ Up
+⬇ Down
+But their view stops immediately if there is:
+❌ A wall
+❌ Another guard
+
+Any cell they can see becomes “guarded”.
+
+Tweet 3:
+🧠 Simple Breakdown of the Solution:
+
+First, mark all guard positions and walls on the grid.
+
+Now, for every row:
+→ Move left to right, then right to left.
+→ If a guard is found, mark all the way until you hit a wall or another guard.
+
+Repeat the same for every column (top to bottom, bottom to top).
+
+Tweet 4:
+Why 4 sweeps (→, ←, ↓, ↑)?
+Because a guard can see in all 4 directions.
+This way, we simulate their vision using just loops — no complex data structure needed.
+
+Tweet 5:
+✅ After marking all visible cells as “guarded”,
+we simply count how many cells are still:
+
+Empty
+
+Not guarded
+
+Not a wall / guard
+
+That final count = answer 🎯
+
+
+
+
+---
 ```cpp
 class Solution {
 public:
