--- a/dsa1578.md
+++ b/dsa1578.md
@@ -38,3 +38,36 @@ n == colors.length == neededTime.length
 colors contains only lowercase English letters.
 
 ---
+
+
+```cpp
+class Solution {
+public:
+    int minCost(string s, vector<int>& cost) {
+        int n = s.size();
+        int total = 0;
+
+        for (int i = 0; i < n; ) {
+            int j = i;
+            int sum = 0;
+            int maxCost = 0;
+
+            
+            while (j < n && s[j] == s[i]) {
+                sum += cost[j];
+                maxCost = max(maxCost, cost[j]);
+                j++;
+            }
+
+            
+            total += sum - maxCost;
+
+            i = j;
+        }
+
+        return total;
+    }
+
+};
+
+```
