--- a/dsa3318.md
+++ b/dsa3318.md
@@ -43,3 +43,52 @@ Constraints:
 1 <= x <= k <= nums.length
 
 ---
+
+
+```cpp
+#include <bits/stdc++.h>
+using namespace std;
+
+class Solution {
+public:
+    using pii = pair<int, int>;
+
+    // Helper: calculate "x sum" for the current frequency array
+    static int calcXSum(const auto& freq, int x) {
+        auto cur = freq;
+        sort(cur.begin(), cur.end(), greater<pii>());
+        int total = 0;
+        for (int i = 0; i < x && i < (int)cur.size(); ++i) {
+            auto [cnt, val] = cur[i];
+            if (cnt == 0) break;
+            total += cnt * val;
+        }
+        return total;
+    }
+
+    static vector<int> findXSum(vector<int>& nums, int k, int x) {
+        int n = nums.size();
+        vector<int> res(n - k + 1);
+        array<pii, 51> freq{};
+        for (int i = 0; i < 51; ++i) freq[i] = {0, i};
+
+        // Initialize frequency for the first window
+        for (int i = 0; i < k; ++i)
+            freq[nums[i]].first++;
+
+        res[0] = calcXSum(freq, x);
+
+        // Sliding window
+        for (int l = 1; l + k - 1 < n; ++l) {
+            int out = nums[l - 1];
+            int in = nums[l + k - 1];
+            freq[out].first--;
+            freq[in].first++;
+            res[l] = calcXSum(freq, x);
+        }
+
+        return res;
+    }
+};
+
+```
