--- a/dsa3321.md
+++ b/dsa3321.md
@@ -43,3 +43,103 @@ nums.length == n
 1 <= x <= k <= nums.length
 
 ---
+
+
+```cpp
+class Solution {
+public:
+    vector<long long> findXSum(vector<int>& nums, int k, int x) {
+        using ll = long long;
+        using pii = pair<int, int>;
+
+        ll top_sum = 0;
+        int n = nums.size();
+        vector<ll> ans;
+
+        set<pii> top, rest;             // (frequency, value)
+        unordered_map<int, int> freq;   // frequency map
+
+        // Maintain balance between 'top' and 'rest'
+        auto balance = [&]() {
+            // Move highest elements from 'rest' to 'top' until top.size() == x
+            while ((int)top.size() < x && !rest.empty()) {
+                auto it = prev(rest.end());
+                top.insert(*it);
+                top_sum += 1LL * it->first * it->second;
+                rest.erase(it);
+            }
+
+            // Ensure correct ordering between top and rest
+            while (!top.empty() && !rest.empty() &&
+                   (*prev(rest.end()) > *top.begin())) {
+                auto it1 = top.begin();
+                auto it2 = prev(rest.end());
+
+                top.insert(*it2);
+                rest.insert(*it1);
+
+                top_sum += (1LL * it2->first * it2->second -
+                            1LL * it1->first * it1->second);
+
+                top.erase(it1);
+                rest.erase(it2);
+            }
+        };
+
+        // Insert a number into window
+        auto insert = [&](int num) {
+            pii curr = {freq[num], num};
+
+            if (top.count(curr)) {
+                top.erase(curr);
+                top_sum -= 1LL * curr.first * curr.second;
+            } else if (rest.count(curr)) {
+                rest.erase(curr);
+            }
+
+            freq[num]++;
+            pii updated = {freq[num], num};
+            rest.insert(updated);
+
+            balance();
+        };
+
+        // Remove a number from window
+        auto remove = [&](int num) {
+            pii curr = {freq[num], num};
+
+            if (top.count(curr)) {
+                top.erase(curr);
+                top_sum -= 1LL * curr.first * curr.second;
+            } else if (rest.count(curr)) {
+                rest.erase(curr);
+            }
+
+            freq[num]--;
+            if (freq[num] <= 0) {
+                freq.erase(num);
+            } else {
+                pii updated = {freq[num], num};
+                rest.insert(updated);
+            }
+
+            balance();
+        };
+
+        // Initialize first window
+        for (int i = 0; i < k; i++)
+            insert(nums[i]);
+        ans.push_back(top_sum);
+
+        // Slide the window
+        for (int i = k; i < n; i++) {
+            insert(nums[i]);
+            remove(nums[i - k]);
+            ans.push_back(top_sum);
+        }
+
+        return ans;
+    }
+};
+
+```
