--- a/dsa2528.md
+++ b/dsa2528.md
@@ -45,3 +45,34 @@ n == stations.length
 0 <= k <= 10^9
 
 ---
+
+```cpp
+class Solution {
+public:
+    long long maxPower(vector<int>& stations, int r, int k) {
+        int n = stations.size();
+        long long left = 0;
+        long long right = k + accumulate(stations.begin(), stations.end(), 0ll);
+        vector<long long> v(n);
+        while (left <= right) {
+            long long x = (left + right) / 2;
+            for (int i = 0; i < n; ++i) v[i] = stations[i];
+            long long use = 0;
+            long long s = accumulate(stations.begin(), stations.begin() + r, 0ll);
+            for (int i = 0; i < n; ++i) {
+                int t = min(n - 1, i + r);
+                if (i + r < n) s += v[i + r];
+                if (i - r > 0) s -= v[i - r - 1];
+                long long diff = max(0ll, x - s);
+                v[t] += diff;
+                s += diff;
+                use += diff;
+            }
+            if (use <= k) left = x + 1;
+            else right = x - 1;
+        }
+        return right;
+    }
+};
+
+```
