--- a/dsa1611.md
+++ b/dsa1611.md
@@ -30,3 +30,26 @@ Constraints:
 0 <= n <= 10^9
 
 ---
+
+
+```cpp
+class Solution {
+public:
+    int minimumOneBitOperations(int n) {
+        int ans = 0, f = 0;
+        for (int i = 31; i >= 0; i--) {
+            if ((n >> i) & 1) {
+                if (f == 0) {
+                    ans += (1 << (i + 1)) - 1;
+                    f = 1;
+                } else {
+                    ans -= (1 << (i + 1)) - 1;
+                    f = 0;
+                }
+            }
+        }
+        return abs(ans);
+    }
+};
+
+```
